# OneAI

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  OneAI-Analysis-and-Evolution-Roadmap.md  OneAI-TUI-refactor.md  OneAI-platform-app-design.md  OneAI_Competitive_Analysis_v2.ipynb  OneAI_Workflow_StateGraph_CLI_Design.ipynb  README.md  README_EN.md  README_zh.md  agent-windows-mac-linux-android-harmony-sparkling-tome.md  claude code-opencode-codex-gap-analysis.md  domain-pack-design.md  模型驱动的 delegate : switch_paradigm 端到端打通方案.md
crates/oneai-a2a/: Cargo.toml
crates/oneai-a2a/src/: card.rs  client.rs  error.rs  handler.rs  lib.rs  router.rs  server.rs  task_store.rs  transport.rs  types.rs
crates/oneai-agent/: Cargo.toml
crates/oneai-agent/src/: agent_loop.rs  agent_runner.rs  async_task_runner.rs  context_assembler.rs  e2e_tests.rs  error_recovery.rs  group_chat.rs  handoff.rs  hooks.rs  lib.rs  meta_tool.rs  mock_provider.rs  mock_tool.rs  parallel_executor.rs  plan_agent.rs  plan_state.rs  prompts.rs  react_agent.rs  reflection_agent.rs  scope_state.rs  skill_tool.rs  streaming.rs  structured_output.rs  sub_agent.rs  swarm.rs  team.rs  worktree_isolation.rs
crates/oneai-app/: Cargo.toml
crates/oneai-app/src/: builder.rs  e2e_tests.rs  lib.rs  session.rs
crates/oneai-core/: Cargo.toml
crates/oneai-core/src/: budget.rs  circuit_breaker.rs  context_accounting.rs  context_manager.rs  cost.rs  error.rs  handoff.rs  lib.rs  model_context.rs  platform.rs  platform_capabilities.rs  provider_pool.rs  rate_limiter.rs  smart_router.rs  swarm.rs  team.rs  token_counter.rs  traits.rs  types.rs  usage.rs
crates/oneai-domain/: Cargo.toml
crates/oneai-domain/src/: builtin_sources.rs  coding_pack.rs  compression_template.rs  config_parser.rs  context_source.rs  domain_pack.rs  lib.rs  market.rs  memory_profile.rs  merge.rs  paradigm_strategy.rs  permission_profile.rs  project_info.rs  repo_map.rs  research_pack.rs  spec.rs  spec_file.rs  tool_decorator.rs  validator.rs
crates/oneai-eval/: Cargo.toml
crates/oneai-eval/src/: builtin_metrics.rs  builtin_suites.rs  efficiency.rs  eval_case.rs  eval_metric.rs  eval_result.rs  eval_runner.rs  eval_suite.rs  lib.rs  memory.rs  replay.rs  report_format.rs
crates/oneai-eval/src/memory/: case.rs  metrics.rs  runner.rs  runner_tests.rs  suite.rs
crates/oneai-eval/src/swebench/: instance.rs  judge.rs  leaderboard.rs  mod.rs  (+1 more)
crates/oneai-mcp/: Cargo.toml
crates/oneai-mcp/src/: client.rs  config.rs  discovery.rs  error.rs  handler.rs  lib.rs  plugin.rs  router.rs  server.rs  transport.rs
crates/oneai-memory/: Cargo.toml
crates/oneai-memory/src/: compression.rs  core_memory.rs  core_memory_source.rs  fact_extraction.rs  fact_store.rs  hybrid_scorer.rs  lib.rs  long_term.rs  manager.rs  memory_tools.rs  reflection.rs  short_term.rs  vector_store.rs
crates/oneai-parser/: Cargo.toml
crates/oneai-parser/src/: constrained.rs  fallback.rs  fuzzy.rs  lib.rs  three_layer.rs
crates/oneai-persistence/: Cargo.toml
crates/oneai-persistence/src/: checkpoint.rs  cost_tracker.rs  lib.rs  progressive_checkpoint.rs  sqlite_store.rs  state.rs  usage_tracker.rs  working_state_store.rs
crates/oneai-platform-android/: Cargo.toml
crates/oneai-platform-android/src/: gate.rs  jni_bridge.rs  lib.rs
crates/oneai-platform-desktop/: Cargo.toml
crates/oneai-platform-desktop/src/: bridge_common.rs  lib.rs  linux.rs  macos.rs  windows.rs
crates/oneai-platform-harmony/: Cargo.toml
crates/oneai-platform-harmony/src/: callback_bridge.rs  gate.rs  lib.rs
crates/oneai-platform-ios/: Cargo.toml
crates/oneai-platform-ios/src/: callback_bridge.rs  gate.rs  lib.rs
crates/oneai-provider/: Cargo.toml
crates/oneai-provider/src/: anthropic.rs  gemini.rs  lib.rs  model_router.rs  ollama.rs  openai.rs  provider_factory.rs  provider_pool.rs  retry.rs  smart_router.rs
crates/oneai-provider/tests/: proxy_feature.rs
crates/oneai-rag/: Cargo.toml
crates/oneai-rag/src/: chunk_split.rs  document.rs  embedding.rs  index.rs  lib.rs  provider_adapter.rs  retrieval.rs
crates/oneai-scheduler/: Cargo.toml
crates/oneai-scheduler/src/: lib.rs  scheduler.rs
crates/oneai-skill/: Cargo.toml
crates/oneai-skill/src/: builtin.rs  discovery.rs  lib.rs  registry.rs  selector.rs
crates/oneai-staticlib/: Cargo.toml
crates/oneai-staticlib/src/: lib.rs
crates/oneai-studio/: Cargo.toml
crates/oneai-studio/src/: checkpoint_dto.rs  graph_dto.rs  handlers.rs  lib.rs  routes.rs  server.rs  state.rs  trace_dto.rs  ws.rs
crates/oneai-studio/static/: graph-render.js  index.html  studio.css  studio.js
crates/oneai-tool/: Cargo.toml
crates/oneai-tool/src/: apply_patch.rs  approval.rs  executor.rs  interaction_gate.rs  lib.rs  local_tools.rs  mcp_real.rs  mcp_tools.rs  registry.rs  sandbox.rs  tool_interfaces.rs
crates/oneai-trace/: Cargo.toml
crates/oneai-trace/src/: collector.rs  context.rs  emitter.rs  event.rs  lib.rs  metrics.rs  noop.rs  otel_exporter.rs  otel_metrics.rs  span.rs  tree.rs
crates/oneai-uniffi/: Cargo.toml
crates/oneai-uniffi/src/: app.rs  app_builder.rs  c_facade.rs  callback.rs  group_chat.rs  lib.rs  rust_log.rs  types.rs
crates/oneai-wasm/: Cargo.toml
crates/oneai-wasm/src/: action_template.rs  config.rs  error.rs  guest_api.rs  lib.rs  module.rs  monitor.rs  registry.rs  runtime.rs  tool.rs  wasi.rs
crates/oneai-workflow/: Cargo.toml
crates/oneai-workflow/src/: compiler.rs  config.rs  dag.rs  executor.rs  lib.rs  render.rs  state_executor.rs  state_graph.rs  validator.rs
examples/cli/: Cargo.toml
examples/cli/src/: cmd_a2a.rs  cmd_chat.rs  cmd_config.rs  cmd_cost.rs  cmd_embed.rs  cmd_eval.rs  cmd_handoff.rs  cmd_init.rs  cmd_mcp.rs  cmd_memory.rs  cmd_pack.rs  cmd_provider.rs  cmd_run.rs  cmd_session.rs  cmd_skill.rs  cmd_studio.rs  cmd_swarm.rs  cmd_tasks.rs  cmd_team.rs  cmd_token.rs  cmd_usage.rs  cmd_version.rs  cmd_wasm.rs  cmd_workflow.rs  config.rs  main.rs  tui.rs
examples/desktop-app/: Cargo.toml
examples/desktop-app/src/: main.rs
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
(+56 files in other folders)
