[workspace]
resolver = "2"
members = [
    "crates/oneai-core",
    "crates/oneai-provider",
    "crates/oneai-agent",
    "crates/oneai-workflow",
    "crates/oneai-memory",
    "crates/oneai-tool",
    "crates/oneai-skill",
    "crates/oneai-parser",
    "crates/oneai-rag",
    "crates/oneai-scheduler",
    "crates/oneai-persistence",
    "crates/oneai-app",
    "crates/oneai-uniffi",
    "crates/oneai-staticlib",
    "crates/oneai-domain",
    "crates/oneai-platform-desktop",
    "crates/oneai-platform-android",
    "crates/oneai-platform-ios",
    "crates/oneai-platform-harmony",
    "crates/oneai-trace",
    "crates/oneai-a2a",
    "crates/oneai-wasm",
    "crates/oneai-eval",
    "crates/oneai-studio",
    "crates/oneai-mcp",
    "examples/cli",
    "examples/desktop-app",
    "examples/rust",
]
# oneai-staticlib (the liboneai.a staticlib) is a workspace member so `-p`
# works and its workspace-inherited deps resolve, BUT it is excluded from
# `default-members` so bare `cargo build`/`cargo test` never build it — they'd
# otherwise emit a ~900MB debug static archive every run. Build it explicitly
# (`cargo build -p oneai-staticlib` or scripts/build_apple.sh) only when
# packaging a native lib. `cargo clippy --workspace --all-targets` uses check
# mode and does not emit the archive.
default-members = [
    "crates/oneai-core",
    "crates/oneai-provider",
    "crates/oneai-agent",
    "crates/oneai-workflow",
    "crates/oneai-memory",
    "crates/oneai-tool",
    "crates/oneai-skill",
    "crates/oneai-parser",
    "crates/oneai-rag",
    "crates/oneai-scheduler",
    "crates/oneai-persistence",
    "crates/oneai-app",
    "crates/oneai-uniffi",
    "crates/oneai-domain",
    "crates/oneai-platform-desktop",
    "crates/oneai-platform-android",
    "crates/oneai-platform-ios",
    "crates/oneai-platform-harmony",
    "crates/oneai-trace",
    "crates/oneai-a2a",
    "crates/oneai-wasm",
    "crates/oneai-eval",
    "crates/oneai-studio",
    "crates/oneai-mcp",
    "examples/cli",
    "examples/desktop-app",
    "examples/rust",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Marssssss/OneAI"
homepage = "https://github.com/Marssssss/OneAI"
readme = "README.md"
rust-version = "1.74"
keywords = ["ai", "agent", "llm", "framework", "cross-platform"]
categories = ["api-bindings", "development-tools", "science::robotics"]

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
url = "2"

# HTTP / SSE
# `socks` enables SOCKS4/4a/5/5h connectors (ALL_PROXY=socks5://...).
# `system-proxy` lets reqwest additionally read macOS/Windows GUI proxy
# settings on top of the always-on HTTP_PROXY/HTTPS_PROXY/ALL_PROXY/NO_PROXY
# env-var detection. Every outbound HTTP client in the workspace (providers,
# web_search/web_fetch, A2A, embedding, MCP HTTP) is built via
# reqwest::Client::new()/builder(), so env-var proxy just works.
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "socks", "system-proxy"], default-features = false }
eventsource-stream = "0.2"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Data structures
daggy = "0.8"
petgraph = "0.7"
indexmap = "2"

# Vector search — embedded lightweight implementation (no external dependency)
# We implement our own simple HNSW-like store in oneai-memory for maximum portability

# Regex
regex = "1"

# OpenTelemetry
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc-tonic", "http-proto"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# MCP
rmcp = "0.1"

# UniFFI — 0.32 (the bindgen CLI ships a binary at 0.32; 0.28's uniffi_bindgen
# is library-only, which blocked library-mode binding generation).
uniffi = "0.32"

# Internal crates (shared) — `version` is REQUIRED so `cargo publish` rewrites
# the path dependency into a registry requirement (path deps without a version
# are rejected by `cargo publish`). Bump in lockstep with [workspace.package].
oneai-core = { path = "crates/oneai-core", version = "1.0.0" }
oneai-provider = { path = "crates/oneai-provider", version = "1.0.0" }
oneai-agent = { path = "crates/oneai-agent", version = "1.0.0" }
oneai-workflow = { path = "crates/oneai-workflow", version = "1.0.0" }
oneai-memory = { path = "crates/oneai-memory", version = "1.0.0" }
oneai-tool = { path = "crates/oneai-tool", version = "1.0.0" }
oneai-skill = { path = "crates/oneai-skill", version = "1.0.0" }
oneai-parser = { path = "crates/oneai-parser", version = "1.0.0" }
oneai-rag = { path = "crates/oneai-rag", version = "1.0.0" }
oneai-scheduler = { path = "crates/oneai-scheduler", version = "1.0.0" }
oneai-persistence = { path = "crates/oneai-persistence", version = "1.0.0" }
oneai-app = { path = "crates/oneai-app", version = "1.0.0" }
oneai-uniffi = { path = "crates/oneai-uniffi", version = "1.0.0" }
oneai-platform-desktop = { path = "crates/oneai-platform-desktop", version = "1.0.0" }
oneai-platform-android = { path = "crates/oneai-platform-android", version = "1.0.0" }
oneai-platform-ios = { path = "crates/oneai-platform-ios", version = "1.0.0" }
oneai-platform-harmony = { path = "crates/oneai-platform-harmony", version = "1.0.0" }
oneai-trace = { path = "crates/oneai-trace", version = "1.0.0" }
oneai-domain = { path = "crates/oneai-domain", version = "1.0.0" }
oneai-a2a = { path = "crates/oneai-a2a", version = "1.0.0" }
oneai-wasm = { path = "crates/oneai-wasm", version = "1.0.0" }
oneai-eval = { path = "crates/oneai-eval", version = "1.0.0" }
oneai-studio = { path = "crates/oneai-studio", version = "1.0.0" }
oneai-mcp = { path = "crates/oneai-mcp", version = "1.0.0" }

# WASM
wasmtime = "45"

# Release profile — smaller/faster binaries for the TUI (`oneai-cli`) and the
# staticlib consumed by native apps. Harmless for lib crates (crates.io ships
# source, not artifacts).
[profile.release]
lto = "thin"
codegen-units = 1
strip = true
