[package]
name = "oneai-a2a"
description = "OneAI A2A Protocol SDK — Agent-to-Agent communication client (Google A2A open protocol)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
oneai-core = { workspace = true }
oneai-domain = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
