[package]
name = "oneai-core"
description = "OneAI core types, traits, and abstractions"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
uniffi = { workspace = true }