[package]
name = "oneai-mcp"
description = "OneAI MCP — MCP Server hosting and Plugin Registry for the Model Context Protocol ecosystem"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# HTTP (for SSE/StreamableHttp transports)
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
tokio-stream = { workspace = true }

# Config parsing
toml = "0.8"
dirs = "5"

# Internal crates
oneai-core = { workspace = true }
oneai-tool = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = ["mcp"]
mcp = []
