[package]
name = "oneai-persistence"
description = "OneAI state persistence and checkpoint management"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
oneai-core = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"