[package]
name = "oneai-platform-ios"
description = "OneAI iOS platform adapter — UIAlertController approval gate via C callback bridge"
version.workspace = true
edition.workspace = true

[dependencies]
oneai-core = { workspace = true }
oneai-tool = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
oneai-app = { workspace = true }