[package]
name = "oneai-rag"
description = "OneAI RAG (Retrieval-Augmented Generation) support"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
oneai-core = { workspace = true }
oneai-memory = { workspace = true }