[package]
name = "oneai-scheduler"
description = "OneAI task scheduling with platform heartbeat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
oneai-core = { workspace = true }