[package]
name = "oneai-skill"
description = "OneAI SKILL system with progressive disclosure and lightweight selector"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
oneai-core = { workspace = true }