[package]
name = "oneai-tool"
description = "OneAI tool management, registry, MCP integration, and approval gates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
rmcp = { workspace = true }
oneai-core = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
tokio-stream = { workspace = true }
html2text = "0.5"
walkdir = "2"
glob = "0.3"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"