[package]
name = "oneai-trace"
description = "OneAI Trajectory Logger — OpenInference-compatible trace mechanism for agent evaluation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["trace"]
trace = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }