[package]
name = "oneai-uniffi"
description = "OneAI UniFFI binding definitions for cross-platform foreign-language interfaces"
version.workspace = true
edition.workspace = true

[lib]
# Name `oneai` so the cdylib is `liboneai.so` / `liboneai.dylib` — matches
# `System.loadLibrary("oneai")` on Android and `scripts/generate_bindings.sh`
# (which looks for `liboneai.*`). The package stays `oneai-uniffi`.
name = "oneai"
crate-type = ["cdylib", "lib"]

[dependencies]
uniffi = { workspace = true, features = ["tokio", "cli"] }
serde_json = { workspace = true }
tokio = { workspace = true }
oneai-core = { workspace = true }
oneai-provider = { workspace = true }
oneai-agent = { workspace = true }
oneai-tool = { workspace = true }
oneai-memory = { workspace = true }
oneai-skill = { workspace = true }
oneai-parser = { workspace = true }
oneai-workflow = { workspace = true }
oneai-scheduler = { workspace = true }
oneai-persistence = { workspace = true }
oneai-rag = { workspace = true }
oneai-app = { workspace = true }

[build-dependencies]
uniffi = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }