[package]
name = "oneai-workflow"
description = "OneAI workflow compiler, DAG, validator, and executor"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
daggy = { workspace = true }
oneai-core = { workspace = true }
oneai-agent = { workspace = true }